k8s/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zmartr-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zmartr-frontend
  template:
    metadata:
      labels:
        app: zmartr-frontend
    spec:
      containers:
      - name: zmartr-frontend
        image: registry.digitalocean.com/oscarleo/zmartr-frontend
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "250m"
        ports:
        - containerPort: 3000
