k8s/frontend/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: zmartr-frontend-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: zmartr-frontend
  ports:
  - port: 80
    targetPort: 3000
