k8s/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: zmartr-frontend-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: zmartr-frontend-cluster-ip
          servicePort: 80
